[package]
name = "url-short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
nanoid = "0.4.0"
redis = "0.25.4"
serde = { version = "1.0.203", features = ["derive"] }

tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.1"

